--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-node_modules
-npm-debug.log
-Dockerfile
-.dockerignore
-.git
-.gitignore
+.git/
+.github/
+.idea/
+bin/
+dist/
+node_modules/
+resources/
