--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "description": "Proxy server to bypass Cloudflare protection.",
   "scripts": {
-    "start": "node ./dist/server.js",
+    "start": "tsc && node ./dist/server.js",
     "build": "tsc",
     "dev": "nodemon -e ts --exec ts-node src/server.ts",
     "package": "node build-binaries.js",
@@ -23,7 +23,7 @@
     "body-parser": "^1.19.0",
     "console-log-level": "^1.4.1",
     "express": "^4.17.1",
-    "puppeteer": "^3.3.0",
+    "puppeteer": "^13.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -31,13 +31,13 @@
     "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^14.17.27",
-    "@types/puppeteer": "^3.0.6",
+    "@types/node": "^16.11.7",
+    "@types/puppeteer": "^5.4.4",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "archiver": "^5.3.0",
     "nodemon": "^2.0.13",
-    "pkg": "^5.3.3",
+    "pkg": "^4.4.9",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
