Install undetected_chromedriver dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ bottle==0.12.23
 waitress==2.1.2
 selenium==4.4.3
 func-timeout==4.3.5
+# required by undetected_chromedriver
+requests==2.28.1
+websockets==10.3
+# only required for linux
 xvfbwrapper==0.2.9
