Hotfix 2 - bad Chromium build, instances failed to terminate (#1072)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flaresolverr",
-  "version": "3.3.14-hotfix",
+  "version": "3.3.14-hotfix2",
   "description": "Proxy server to bypass Cloudflare protection",
   "author": "Diego Heras (ngosang / ngosang@hotmail.es)",
   "license": "MIT"
