Add platform specifiers to dependencies (#877)

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ prometheus-client==0.17.1
 requests==2.31.0
 certifi==2023.7.22
 websockets==11.0.3
-# only required for linux
-xvfbwrapper==0.2.9
+# only required for linux and macos
+xvfbwrapper==0.2.9; platform_system != "Windows"
 # only required for windows
-pefile==2023.2.7
+pefile==2023.2.7; platform_system == "Windows"
