--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -29,14 +29,11 @@ body:
     options:
       - label: I have read the Discussions
         required: true
-- type: dropdown
+- type: input
   attributes:
     label: Have you ACTUALLY checked all these?
-    description: Please do not waste our time and yours; these checks are there for a reason, it is not just so you can tick boxes for fun. If you select <b>Yes</b> and it is clear you are lying or have put in no effort, your issue will be closed and locked without comment. If you select <b>No</b> but still open this issue, you will be permanently blocked for timewasting.
-    options:
-      - 'Yes'
-      - 'No'
-    default: 0
+    description: Please do not waste our time and yours; these checks are there for a reason, it is not just so you can tick boxes for fun. If you type <b>YES</b> and it is clear you are lying or have put in no effort, your issue will be closed and locked without comment. If you type <b>NO</b> but still open this issue, you will be permanently blocked for timewasting.
+      placeholder: YES or NO
   validations:
     required: true
 - type: textarea
