Add support for default proxy configuration in environment variables

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ HEADLESS=true
 # AUTO_SESSION_TTL=30
 # MAX_AUTO_SESSIONS=10
 
+# Optional: Default proxy for all requests
+# PROXY_URL=http://proxy.example.com:8080
+
 # Optional: Captcha solver timeout
 CAPTCHA_SOLVER=none
 
