--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: release
+name: Release
 
 on:
   push:
@@ -8,12 +8,12 @@ on:
 jobs:
   create-release:
     name: Create release
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v5
         with:
-          fetch-depth: 0 # get all commits, branches and tags (required for the changelog)
+          fetch-depth: 0
 
       - name: Build changelog
         id: github_changelog
@@ -22,74 +22,45 @@ jobs:
           changelog="${changelog//'%'/'%25'}"
           changelog="${changelog//$'\n'/'%0A'}"
           changelog="${changelog//$'\r'/'%0D'}"
-          echo "##[set-output name=changelog;]${changelog}"
+          echo "changelog=${changelog}" >> $GITHUB_ENV
 
       - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body: ${{ steps.github_changelog.outputs.changelog }}
-          draft: false
-          prerelease: false
+          name: ${{ github.ref }}
+          body: ${{ env.changelog }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
-  build-linux-package:
-    name: Build Linux binary
+  build-package:
+    name: Build binaries
     needs: create-release
-    runs-on: ubuntu-24.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v5
         with:
-          fetch-depth: 0 # get all commits, branches and tags (required for the changelog)
+          fetch-depth: 0
 
       - name: Setup Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v6
         with:
           python-version: "3.13"
 
       - name: Build artifacts
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install pyinstaller==6.14.2
+          python -m pip install pyinstaller==6.16.0
           cd src
           python build_package.py
 
       - name: Upload release artifacts
-        uses: alexellis/upload-assets@0.4.1
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ./dist/flaresolverr_*
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-        with:
-          asset_paths: '["./dist/flaresolverr_*"]'
-
-  build-windows-package:
-    name: Build Windows binary
-    needs: create-release
-    runs-on: windows-2022
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # get all commits, branches and tags (required for the changelog)
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.13"
-
-      - name: Build artifacts
-        run: |
-          python -m pip install -r requirements.txt
-          python -m pip install pyinstaller==6.14.2
-          cd src
-          python build_package.py
-
-      - name: Upload release artifacts
-        uses: alexellis/upload-assets@0.4.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-        with:
-          asset_paths: '["./dist/flaresolverr_*"]'
