--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
 bottle==0.13.4
 waitress==3.0.2
-selenium==4.39.0
 func-timeout==4.3.5
 prometheus-client==0.23.1
-# Required by undetected_chromedriver
-requests==2.32.5
-certifi==2025.11.12
-websockets==15.0.1
-packaging==25.0
-# Only required for Linux and macOS
+certifi>=2024.0.0
+# pydoll for browser automation with built-in Cloudflare bypass
+pydoll-python>=2.15.0
+# Required by pydoll
+aiofiles>=24.0.0
+# Only required for Linux and macOS (for virtual display)
 xvfbwrapper==0.2.16; platform_system != "Windows"
-# Only required for Windows
+# Only required for Windows (Chrome version detection)
 pefile==2024.8.26; platform_system == "Windows"
